--- a/what-todo/index.html
+++ b/what-todo/index.html
@@ -5,6 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="" />
     <link href="/src/style.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Embeded google font (Inika) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&display=swap" rel="stylesheet">
+
     <title>what-todo</title>
   </head>
   <body>
