--- a/what-todo/index.html
+++ b/what-todo/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="" />
     <link href="/src/style.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description"
+          content="Simple, responsive frontend Todo list application built with Vue 3, Typescript, Tailwind, Pinia and a bit of Axios."
+    />
 
     <!-- Embeded google font (Inika) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
